--- a/Android/RSCAndroid/app/src/main/res/layout/activity_login.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_login.xml
@@ -21,17 +21,17 @@
 
     <LinearLayout
             android:id="@+id/login_creds_container"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="110dp"
             android:orientation="vertical">
 
         <EditText
-                android:id="@+id/et_username"
+                android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Username"/>
+                android:hint="Email"/>
 
         <EditText
                 android:id="@+id/et_password"
