--- a/Android/RSCAndroid/app/src/main/res/layout/activity_login.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_login.xml
@@ -5,10 +5,6 @@
         android:id="@+id/activity_login"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="foi.hr.rscandroid.ui.login.LoginActivity">
 
     <ImageView
@@ -24,6 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:layout_marginLeft="@dimen/default_spacing"
+            android:layout_marginRight="@dimen/default_spacing"
             android:layout_marginTop="110dp"
             android:orientation="vertical">
 
@@ -43,12 +41,21 @@
 
     </LinearLayout>
 
+    <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:text="Log in"
+            android:textColor="@android:color/white"
+            android:background="@color/colorAccent"/>
+
     <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_alignParentBottom="true"
+            android:layout_above="@+id/btn_login"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"/>
