--- a/Android/RSCAndroid/app/src/main/res/layout/activity_login.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_login.xml
@@ -9,9 +9,9 @@
 
     <ImageView
             android:id="@+id/iv_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
             android:layout_marginTop="30dp"
             android:src="@mipmap/ic_launcher"/>
 
@@ -23,6 +23,7 @@
             android:layout_marginLeft="@dimen/default_spacing"
             android:layout_marginRight="@dimen/default_spacing"
             android:layout_marginTop="110dp"
+            android:visibility="gone"
             android:orientation="vertical">
 
         <EditText
@@ -47,17 +48,34 @@
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:text="Log in"
+            android:visibility="gone"
             android:textColor="@android:color/white"
-            android:background="@color/colorAccent"/>
+            android:background="@color/colorAccent"
+            style="?attr/selectableItemBackground"/>
 
-    <com.facebook.login.widget.LoginButton
-            android:id="@+id/login_button"
-            android:layout_width="wrap_content"
+    <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_above="@+id/btn_login"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"/>
+            android:layout_above="@id/btn_login"
+            android:orientation="vertical"
+            android:weightSum="1"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/default_spacing"
+            android:gravity="center">
+
+        <com.google.android.gms.common.SignInButton
+                android:id="@+id/btn_google_sign_in"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+        <com.facebook.login.widget.LoginButton
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_spacing"
+                android:layout_gravity="center_horizontal"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
