--- a/Android/RSCAndroid/app/src/main/res/xml/bottombar_tabs.xml
+++ b/Android/RSCAndroid/app/src/main/res/xml/bottombar_tabs.xml
@@ -4,21 +4,25 @@
     <tab
             id="@+id/tab_upcoming"
             icon="@drawable/ic_upcoming"
-            title="Upcoming"/>
+            title="Upcoming"
+            barColorWhenSelected="@color/tab_upcoming"/>
 
     <tab
             id="@+id/tab_events"
             icon="@drawable/ic_list"
-            title="Events"/>
+            title="Events"
+            barColorWhenSelected="@color/tab_events"/>
 
     <tab
             id="@+id/tab_map"
             icon="@drawable/ic_map"
-            title="Map"/>
+            title="Map"
+            barColorWhenSelected="@color/tab_map"/>
 
     <tab
             id="@+id/tab_profile"
             icon="@drawable/ic_profile"
-            title="Profile"/>
+            title="Profile"
+            barColorWhenSelected="@color/tab_profile"/>
 
 </tabs>
