--- a/Android/RSCAndroid/app/src/main/res/layout/activity_dashboard.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_dashboard.xml
@@ -5,10 +5,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            app:titleTextColor="@android:color/white"/>
+
     <FrameLayout
             android:id="@+id/fragmentContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar"
             android:layout_above="@+id/bottomBar"/>
 
     <com.roughike.bottombar.BottomBar
