--- a/Android/RSCAndroid/app/src/main/res/layout/activity_dashboard.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_dashboard.xml
@@ -24,7 +24,7 @@
             android:layout_height="60dp"
             android:layout_alignParentBottom="true"
             app:bb_tabXmlResource="@xml/bottombar_tabs"
-            app:bb_inActiveTabColor="@android:color/darker_gray"
+            app:bb_inActiveTabColor="@color/tab_inactive"
             app:bb_activeTabColor="@android:color/white"
             app:bb_behavior="shifting"
             app:bb_showShadow="false"/>
