--- a/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
@@ -35,8 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_spacing"
+                android:layout_marginRight="15dp"
                 android:textSize="18sp"
-                android:layout_marginRight="30dp"
                 android:text="Nickname:"
                 />
 
@@ -50,5 +50,14 @@
                 />
 
     </LinearLayout>
+
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorAccent"
+            android:text="Sign out"
+            android:textColor="@android:color/white"
+            />
 
 </RelativeLayout>
