--- a/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/android:"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:orientation="vertical">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_avatar"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher"
+            app:civ_border_color="#009688"
+            app:civ_border_width="1dp"/>
 
     <TextView
             android:id="@+id/tv_name"
@@ -25,6 +27,7 @@
             />
 
     <LinearLayout
+            android:id="@+id/name_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_name"
@@ -51,6 +54,39 @@
 
     </LinearLayout>
 
+    <LinearLayout
+            android:id="@+id/email_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/name_container"
+            android:layout_marginLeft="30dp"
+            android:orientation="horizontal">
 
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_spacing"
+                android:layout_marginRight="15dp"
+                android:textSize="18sp"
+                android:text="Email:"
+                />
+
+        <TextView
+                android:id="@+id/tv_email_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_spacing"
+                android:textSize="18sp"
+                android:text="kliba.stefano@gmail.com"
+                />
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_team_participation"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_below="@id/email_container"
+            android:layout_margin="@dimen/default_spacing"
+            />
 
 </RelativeLayout>
