--- a/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -81,12 +81,15 @@
                 />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_team_participation"
+    <Button
+            android:id="@+id/btn_view_teams"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_below="@id/email_container"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_margin="@dimen/default_spacing"
+            android:background="@color/colorAccent"
+            android:text="View my teams"
+            android:textColor="@android:color/white"
             />
 
 </RelativeLayout>
