--- a/Android/RSCAndroid/app/src/main/res/layout/activity_team.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_team.xml
@@ -5,10 +5,12 @@
         android:id="@+id/activity_team"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="foi.hr.rscandroid.ui.teams.TeamActivity">
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_teams"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
 
 </RelativeLayout>
