--- a/Android/RSCAndroid/app/src/main/res/layout/activity_team.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_team.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_team"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         tools:context="foi.hr.rscandroid.ui.teams.TeamActivity">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_teams"
-            android:layout_width="match_parent"
+    <include layout="@layout/content_teams"/>
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_add_black_24dp"
+            android:tint="@android:color/white"
             />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
