--- a/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
@@ -26,19 +26,22 @@
             android:text="Stefano Kliba"
             />
 
-    <LinearLayout
+    <RelativeLayout
             android:id="@+id/name_container"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_name"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="@dimen/default_spacing"
             android:layout_marginRight="@dimen/default_spacing"
             android:orientation="horizontal">
 
         <TextView
+                android:id="@+id/tv_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_spacing"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="40dp"
                 android:layout_marginRight="15dp"
                 android:textSize="18sp"
                 android:text="Nickname:"
@@ -48,61 +51,79 @@
                 android:id="@+id/tv_nickname_data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/tv_nickname"
                 android:layout_marginTop="@dimen/default_spacing"
                 android:textSize="18sp"
+                android:visibility="gone"
                 android:text="Noxqs"
                 />
 
-        <EditText
+        <com.rengwuxian.materialedittext.MaterialEditText
                 android:id="@+id/et_nickname_data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/tv_nickname"
+                android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/default_spacing"
+                android:hint="Nickname"
                 android:textSize="18sp"
                 android:text="Noxqs"
                 android:visibility="gone"
+                android:textColorHint="@color/colorAccentDarker"
+                app:met_floatingLabelTextSize="16sp"
+                app:met_textColorHint="@color/colorAccentDarker"
+                app:met_baseColor="@color/colorAccent"
+                app:met_primaryColor="@color/colorAccent"
+                app:met_hideUnderline="true"
+                app:met_floatingLabel="highlight"
+                app:met_errorColor="@color/registrationErrorColor"
                 />
 
         <ImageView
                 android:id="@+id/iv_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="80dp"
+                android:layout_alignParentEnd="true"
                 android:src="@drawable/ic_mode_edit_black_24dp"
-                android:padding="@dimen/default_spacing"
+                android:paddingTop="@dimen/default_spacing"
                 />
 
         <LinearLayout
+                android:id="@+id/confirmation_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/confirmation_container"
-                android:layout_marginTop="@dimen/default_spacing">
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="@dimen/default_spacing"
+                android:visibility="gone">
 
             <ImageView
+                    android:id="@+id/btn_accept"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginRight="8dp"
-                    android:id="@+id/btn_accept"
                     android:src="@drawable/ic_confirm"
                     />
 
             <ImageView
+                    android:id="@+id/btn_decline"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/btn_decline"
                     android:src="@drawable/ic_canceled"
                     />
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
+
+
 
     <LinearLayout
             android:id="@+id/email_container"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/name_container"
-            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="@dimen/default_spacing"
             android:orientation="horizontal">
 
         <TextView
