--- a/Android/RSCAndroid/app/src/main/res/layout/fragment_events.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/fragment_events.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -9,9 +9,4 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-    <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_marker_small"/>
-
-</android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
