--- a/Android/RSCAndroid/app/src/main/res/layout/activity_dashboard.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_dashboard.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:animateLayoutChanges="true">
+        android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            app:titleTextColor="@android:color/white"/>
-
-    <FrameLayout
-            android:id="@+id/fragmentContainer"
+    <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar"
-            android:layout_above="@+id/bottomBar"/>
+            android:layout_above="@+id/bottomBar"
+            android:animateLayoutChanges="true">
+
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                app:titleTextColor="@android:color/white"/>
+
+        <FrameLayout
+                android:id="@+id/fragmentContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/toolbar"
+                />
+
+    </RelativeLayout>
 
     <com.roughike.bottombar.BottomBar
             android:id="@+id/bottomBar"
