Finished nickname update

--- a/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
@@ -13,7 +13,7 @@
             android:layout_centerHorizontal="true"
             android:src="@mipmap/ic_launcher"
             app:civ_border_color="#009688"
-            app:civ_border_width="1dp"/>
+            app:civ_border_width="0dp"/>
 
     <TextView
             android:id="@+id/tv_name"
@@ -22,6 +22,7 @@
             android:layout_below="@+id/iv_avatar"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
+            android:textColor="@color/primaryText"
             android:textSize="22sp"
             android:text="Stefano Kliba"
             />
@@ -32,9 +33,9 @@
             android:layout_height="80dp"
             android:layout_below="@+id/tv_name"
             android:layout_marginTop="30dp"
-            android:gravity="center_vertical"
             android:layout_marginLeft="@dimen/default_spacing"
             android:layout_marginRight="@dimen/default_spacing"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
         <TextView
@@ -43,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_marginRight="15dp"
+                android:textColor="@color/primaryText"
                 android:textSize="18sp"
                 android:visibility="visible"
                 android:text="Nickname:"
@@ -54,6 +56,8 @@
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/tv_nickname"
                 android:textSize="18sp"
+                android:textColor="@color/primaryText"
+
                 android:visibility="visible"
                 android:text="Noxqs"
                 />
@@ -114,8 +118,6 @@
 
     </RelativeLayout>
 
-
-
     <LinearLayout
             android:id="@+id/email_container"
             android:layout_width="match_parent"
@@ -130,6 +132,7 @@
                 android:layout_marginTop="@dimen/default_spacing"
                 android:layout_marginRight="15dp"
                 android:textSize="18sp"
+                android:textColor="@color/primaryText"
                 android:text="Email:"
                 />
 
@@ -139,6 +142,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_spacing"
                 android:textSize="18sp"
+                android:textColor="@color/primaryText"
                 android:text="kliba.stefano@gmail.com"
                 />
     </LinearLayout>
