--- a/Android/RSCAndroid/app/src/main/res/layout/list_item_event.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/list_item_event.xml
@@ -20,12 +20,32 @@
             android:orientation="vertical"
             android:layout_marginLeft="8dp">
 
-        <TextView
-                android:id="@+id/title"
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textStyle="bold"/>
+                android:orientation="horizontal">
+
+            <TextView
+                    android:id="@+id/title"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="6dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:textSize="14sp"
+                    android:textStyle="bold"/>
+
+            <TextView
+                    android:id="@+id/moderator_flag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="MODERATOR"
+                    android:textAllCaps="true"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:visibility="gone"/>
+
+        </LinearLayout>
 
         <RelativeLayout
                 android:layout_width="match_parent"
