--- a/Android/RSCAndroid/app/src/main/res/values/colors.xml
+++ b/Android/RSCAndroid/app/src/main/res/values/colors.xml
@@ -16,5 +16,7 @@
     <color name="tab_profile">#3F51B5</color>
     <color name="tab_inactive">#E0E0E0</color>
 
+    <color name="moderator_bg">#98292D</color>
+
     <color name="registrationErrorColor">#ffa8a8</color>
 </resources>
