--- a/Android/RSCAndroid/app/src/main/res/layout/fragment_events.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/fragment_events.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -8,5 +9,19 @@
             android:id="@+id/eventList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+    <TextView
+            android:id="@+id/emptyView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="28dp"
+            android:lineSpacingMultiplier="1.4"
+            android:textSize="22sp"
+            android:textStyle="bold|italic"
+            android:visibility="gone"
+            tools:visibility="visible"
+            tools:text="You have no upcoming events.\nJoin an event with your team!"/>
 
 </FrameLayout>
