--- a/Android/RSCAndroid/app/src/main/res/layout/list_item_event.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/list_item_event.xml
@@ -9,10 +9,10 @@
         android:padding="12dp">
 
     <ImageView
+            android:id="@+id/icon"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_question_red"/>
+            android:layout_gravity="center_vertical"/>
 
     <LinearLayout
             android:layout_width="match_parent"
