--- a/Android/RSCAndroid/app/src/main/res/layout/activity_login.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
             android:layout_height="100dp"
             android:layout_centerInParent="true"
             android:layout_marginTop="30dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@drawable/ic_app"/>
 
     <LinearLayout
             android:id="@+id/login_creds_container"
