--- a/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/fragment_profile.xml
@@ -11,7 +11,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_app"
             app:civ_border_color="#009688"
             app:civ_border_width="0dp"/>
 
