--- a/Android/RSCAndroid/app/src/main/res/menu/toolbar_menu.xml
+++ b/Android/RSCAndroid/app/src/main/res/menu/toolbar_menu.xml
@@ -4,7 +4,7 @@
 
     <item
             android:id="@+id/btn_menu_action"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_app"
             android:title="action_button"
             app:showAsAction="ifRoom"/>
 </menu>
