--- a/Android/RSCAndroid/app/src/main/res/layout/activity_event_details.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_event_details.xml
@@ -21,7 +21,7 @@
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             <com.google.android.gms.maps.MapView
                     android:id="@+id/mapView"
