--- a/Android/RSCAndroid/app/src/main/res/layout/activity_event_details.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_event_details.xml
@@ -87,8 +87,11 @@
                 <Button
                         android:id="@+id/action"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
+                        android:layout_height="72dp"
+                        android:layout_marginTop="44dp"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
                         tools:text="Start quiz!"/>
 
             </LinearLayout>
