--- a/Android/RSCAndroid/app/src/main/res/layout/item_team.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/item_team.xml
@@ -1,33 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="75dp"
-              android:paddingTop="8dp"
-              android:paddingBottom="8dp"
-              android:orientation="vertical">
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
-    <TextView
-            android:id="@+id/tv_team_name"
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:orientation="vertical">
+
+        <TextView
+                android:id="@+id/tv_team_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/default_spacing"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/primaryText"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:text="Moist"
+        />
+
+        <TextView
+                android:id="@+id/tv_max_members"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/default_spacing"
+                android:layout_marginTop="@dimen/small_spacing"
+                android:textColor="@color/secondaryText"
+                android:textSize="14sp"
+                tools:text="@string/max_slots_in_team"
+        />
+
+    </LinearLayout>
+
+    <Button
+            android:id="@+id/recruitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/default_spacing"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/primaryText"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="Moist"
-            />
-
-    <TextView
-            android:id="@+id/tv_max_members"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/default_spacing"
-            android:layout_marginTop="@dimen/small_spacing"
-            android:textColor="@color/secondaryText"
-            android:textSize="14sp"
-            tools:text="@string/max_slots_in_team"
-            />
-
-</LinearLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="@android:color/transparent"
+            android:text="Recruit"
+            android:textColor="@color/tab_upcoming"
+            style="@style/Borderless"/>
+</RelativeLayout>
