--- a/Android/RSCAndroid/app/src/main/res/values/styles.xml
+++ b/Android/RSCAndroid/app/src/main/res/values/styles.xml
@@ -34,4 +34,5 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+    <style name="Borderless" parent="Base.Widget.AppCompat.Button.Borderless"/>
 </resources>
