--- a/Android/RSCAndroid/app/src/main/res/layout/content_teams.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/content_teams.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/activity_team"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="foi.hr.rscandroid.ui.teams.TeamActivity">
 
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
+            app:titleTextColor="@android:color/white"
+            app:title="Your teams"/>
+
     <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_teams"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar"
             android:visibility="gone"
             />
 
