--- a/Android/RSCAndroid/app/src/main/res/layout/activity_game.xml
+++ b/Android/RSCAndroid/app/src/main/res/layout/activity_game.xml
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:id="@+id/moderator_next_q"
+            android:id="@+id/btn_mod_next"
             android:text="Next question"
             android:visibility="gone"
             android:textColor="@android:color/white"
